fix(ms-hint-act): spacing fix and formatting fix

--- a/src/app/pages/lesson/main-screen/main-screen-hint-activity/main-screen-hint-activity.component.scss
+++ b/src/app/pages/lesson/main-screen/main-screen-hint-activity/main-screen-hint-activity.component.scss
@@ -43,6 +43,7 @@
       text-align: center;
       text-transform: uppercase;
       margin-top: 0;
+      margin-bottom: 35px;
     }
   }
   .hint-activity__options-container {
